Closed
Bug 432212
Opened 18 years ago
Closed 18 years ago
Viewing a Certificate from the Add Certificate Sheet Deactivates portions of the Window
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.9
People
(Reporter: shorlander, Assigned: smichaud)
References
Details
Attachments
(2 files)
|
20.79 KB,
image/png
|
Details | |
|
7.44 KB,
patch
|
jaas
:
review+
roc
:
superreview+
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008050504 Minefield/3.0pre
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008050504 Minefield/3.0pre
When adding an exception for an invalid Certificate and then viewing the Certificate you are adding the browser looks inactive except for the titlebar and you must select another running application and go back to Firefox before it will go back to looking active.
Reproducible: Always
Steps to Reproduce:
1. Add an exception for a site with an invalid Certificate.
2. Get Certificate.
3. View Certificate and then close the resulting sheet.
4. Confirm exception.
Actual Results:
Window goes to inactive look except for titlebar.
Expected Results:
Window maintains active state appearance.
This looks like it only happens when you open a sheet from a sheet.
If you just add the exception without ever viewing the certificate the window behaves as expected.
| Reporter | ||
Comment 1•18 years ago
|
||
Updated•18 years ago
|
Assignee: nobody → joshmoz
Component: Theme → Widget: Cocoa
Product: Firefox → Core
QA Contact: theme → cocoa
Comment 3•18 years ago
|
||
Steven, could you have a look at it?
Something funny is going on there and I don't know how this case is supposed to be handled.
Assignee: joshmoz → smichaud
| Assignee | ||
Comment 4•18 years ago
|
||
> 1. Add an exception for a site with an invalid Certificate.
Please provide specific steps.
Comment 5•18 years ago
|
||
(In reply to comment #4)
> > 1. Add an exception for a site with an invalid Certificate.
>
> Please provide specific steps.
1a) Visit https://paypal.com/ (which uses a domain-mismatched certificate)
1b) Click "Or you can add an exception..."
1c) Click Add exception
2,3,4 as described
| Assignee | ||
Comment 6•18 years ago
|
||
Thanks, johnath!
> 4. Confirm exception.
You don't need to confirm the exception -- canceling will also "work"
(will trigger the bug).
> This looks like it only happens when you open a sheet from a sheet.
This seems to be right. Here's a much simpler testcase:
1) Open at least two tabs in a browser window.
2) "javascript:alert('blah');" in the window's location bar.
3) Cmd-q or Minefield : Quit Minefield
4) Cancel from the Quit Minefield dialog, then OK in the Javascript
alert.
The browser window now has the inactive appearance.
Tested in today's Minefield nightly on OS X 10.4.11.
I'll look into this further.
| Assignee | ||
Comment 7•18 years ago
|
||
Here's a patch that (in my tests with this bug's two STRs) fixes this
problem.
Turns out that [ChildView didEndSheet:returnCode:contextInfo:] always
re-activates the top-level non-sheet window. But this is incorrect
behavior when the current widget's parent widget is also a sheet -- in
that case it's the parent sheet that should be re-activated (this
happens elsewhere).
Here's a tryserver build made with this patch:
https://build.mozilla.org/tryserver-builds/2008-05-06_10:30-smichaud@pobox.com-bugzilla432212/smichaud@pobox.com-bugzilla432212-firefox-try-mac.dmg
Attachment #319619 -
Flags: review?(joshmoz)
| Reporter | ||
Comment 8•18 years ago
|
||
Yeah your tryserver build fixes this for me.
Comment on attachment 319619 [details] [diff] [review]
Fix
Great!
Attachment #319619 -
Flags: superreview?(roc)
Attachment #319619 -
Flags: review?(joshmoz)
Attachment #319619 -
Flags: review+
Attachment #319619 -
Flags: superreview?(roc) → superreview+
| Assignee | ||
Comment 10•18 years ago
|
||
Comment on attachment 319619 [details] [diff] [review]
Fix
Though this shouldn't block the 1.9 release, I think it'd be good to
include it in 1.9.
This bug's patch fixes an issue related to bug 406730 (which _is_ a
blocker). The patch is a well-defined fix for a well-defined problem
-- and therefore low risk.
Attachment #319619 -
Flags: approval1.9?
Comment 11•18 years ago
|
||
Comment on attachment 319619 [details] [diff] [review]
Fix
a+ per triage today
Attachment #319619 -
Flags: approval1.9? → approval1.9+
Comment 12•18 years ago
|
||
landed on trunk
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Target Milestone: --- → mozilla1.9
Comment 13•18 years ago
|
||
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008050804 Minefield/3.0pre as well as the equivalent nightly on Tiger. I used the STR in Comment 6 to verify.
Status: RESOLVED → VERIFIED
Updated•18 years ago
|
Flags: in-litmus?
Comment 14•17 years ago
|
||
https://litmus.mozilla.org/show_test.cgi?id=5875 added to Litmus.
Flags: in-litmus? → in-litmus+
Updated•17 years ago
|
Flags: wanted1.9.0.x+
You need to log in
before you can comment on or make changes to this bug.
Description
•