fix active/inactive for sheets that are children of sheets. patch by Steven Michaud. b=432212 r=josh sr=roc a=schrep